[package]
name = "Rusted_PEKKA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serenity = { vesion = "0.11.5",  default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
coc-rs = "0.3.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"] 