[package]
name = "Rusted_PEKKA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coc-rs = "0.5.6"
log = "0.4.14"
simple_file_logger = "0.2.0"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["cache", "framework", "standard_framework", "rustls_backend", "gateway"]
