[package]
name = "Rusted_PEKKA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coc-rs = "0.6.0"
log = "0.4.14"
simple_file_logger = "0.2.0"
reqwest = "0.11.3"
serde_json = "1.0"
base64 = "0.13.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["cache", "framework", "standard_framework", "rustls_backend", "gateway"]
